Improve mobile spacing issues, improve technology we use paragraph.

--- a/components/specific/landing/Comparison/comparison.module.scss
+++ b/components/specific/landing/Comparison/comparison.module.scss
@@ -120,6 +120,12 @@
     padding: 1em;
   }
   
+  .heading {
+    font-size: 1.8em;
+    margin-bottom: 1.5em;
+    margin-left: 1.25em;
+  }
+  
   .advantage {
     transition-delay: 0.1s; // Add small delay for smoother mobile reveal
   }
