--- a/components/specific/landing/Testimonials/testimonials.module.scss
+++ b/components/specific/landing/Testimonials/testimonials.module.scss
@@ -130,7 +130,7 @@
     line-height: 1.5em;
     font-weight: 100;
     margin: 0 0 1.5em;
-    font-size: 1.5em;
+    font-size: 1.25em;
     color: #333333; // Always dark text on light testimonial cards
     transition: color 0.3s ease;
 
